# timetabler

./: .gitignore  CMakeLists.txt  README.md
data/: settings.conf
src/: auxiliary.cpp  auxiliary.h  timetabler.cpp  timetabler.h
